Revert "Fix section title alignment"
This reverts commit 3554ee95ed69a2848a0d6ef33c6dbf1f1e6385ad.

--- a/src/components/WhyItWorks/WhyItWorks.css
+++ b/src/components/WhyItWorks/WhyItWorks.css
@@ -4,10 +4,7 @@
   background-size: cover;
   background-position: top;
   min-height: 350px;
-}
-
-#section-why .section-header .col {
-  align-self: center;
+  align-content: center;
 }
 
 #section-why .section-header .section-title {
@@ -25,7 +22,7 @@
 }
 
 #section-why .section-content h3 {
-  font-family: ArsMaquette-Black, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: ArsMaquette-Black, "Helvetica Neue", Helvetica, Arial, sans-serif;
   letter-spacing: 0.01rem;
   font-weight: 900 !important;
   font-size: 1.6rem;
@@ -55,7 +52,7 @@
   }
 
   #section-why .section-content h3 {
-    font-family: ArsMaquette-Black, 'Helvetica Neue', Helvetica, Arial,
+    font-family: ArsMaquette-Black, "Helvetica Neue", Helvetica, Arial,
       sans-serif;
     letter-spacing: 0.01rem;
     font-weight: 700;
